[build-system]
requires = ["hatchling>=1.5.0", "hatch-nodejs-version>=0.3.2", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_niryo_one"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyterlab-blockly>=0.3.2,<0.4"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
env = [
    "pyniryo"
]
dev = [
    "click",
    "pre-commit",
    "jupyter_releaser"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["/jupyterlab_niryo_one/labextension"]
exclude = ["/.github", "/binder", "node_modules"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_niryo_one/labextension" = "share/jupyter/labextensions/jupyterlab-niryo-one"
"install.json" = "share/jupyter/labextensions/jupyterlab-niryo-one/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlab_niryo_one/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_niryo_one/labextension/static/style.js",
    "jupyterlab_niryo_one/labextension/package.json",
]
skip-if-exists = ["jupyterlab_niryo_one/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_niryo_one/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
